test/fail/invaliddim2.min
program
    array x[-39]
start
end
